# pyramid

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp  main_window.cpp  main_window.h
